# growtopia-http-v2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  RESTRUCTURING.md  TESTING_QUICKSTART.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: README.md  TESTING.md
include/growtopia/: handlers.h  listener.h  security.h
include/growtopia/config/: server.h
scripts/: build.sh  format.sh  lint.sh  setup.sh  test.sh
src/: handlers.c  listener.c  main.c  security.c
src/config/: server.h
